--- a/packages/health-monitoring/package.json
+++ b/packages/health-monitoring/package.json
@@ -23,7 +23,10 @@
     "lint": "eslint src/**/*.ts",
     "typecheck": "tsc --noEmit"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@turnkey/service-config": "workspace:^",
+    "@turnkey/constants": "workspace:^"
+  },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "typescript": "^5.0.0",
